HTML started. On to CSS

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="assets/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
+
+    <title>A.M. Lilly</title>
+</head>
+<body>
+    <h1>
+        Andrew Lilly
+    </h1>
+    <p>
+        <a href="html_images.asp">About</a>
+        <a href="html_images.asp">Portfolio</a>
+        <a href="html_images.asp">Contact</a>
+    </p>
+    <div class="container">
+        <h1>
+            About Me
+        </h1>
+
+        <br>
+
+        <div class="bio_pic">
+            <img src="http://via.placeholder.com/200x200" alt="Bio Pic">
+        </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam cumque soluta quasi qui? Soluta expedita aliquam in ducimus corrupti accusamus labore ex! Fuga illo nihil, vero magni modi reiciendis. Consequuntur.
+        </p>
+
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut inventore expedita facere veniam! Numquam, quam quae debitis itaque cumque, totam, aperiam eos ab ut impedit saepe ullam praesentium molestias doloribus.
+        </p>
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis reprehenderit, quae quas eius ex animi assumenda fugiat minus corrupti cupiditate autem iusto tempora totam delectus repellat illum, vel quod magni.
+        </p>
+    </div>
+</body>
+</html>
