--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <a href="https://amlilly.github.io/Hangman-Game/"><img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman"></a>
+        <a href="https://amlilly.github.io/Hangman-Game/"><img src="assets/images/hangman.jpg" alt="hangman"></a>
 
         <h3>Hangman</h3>
       </div>
@@ -41,17 +41,17 @@
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-          <a href="https://amlilly.github.io/Train-Scheduler/"><img src="assets/images/technics-q-c-640-480-7.jpg" alt="Train Scheduler"></a>
+          <a href="https://amlilly.github.io/Train-Scheduler/"><img src="assets/images/train.jpg" alt="Train Scheduler"></a>
 
         <h3>Train Scheduler</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <img src="assets/images/rps.png" alt="Rock Paper Scissors">
 
         <h3>Rock Paper Scissors</h3>
       </div>
       <div class="work">
-        <a href="https://amlilly.github.io/week-4-game/"><img src="assets/images/technics-q-c-640-480-9.jpg" alt="Crystals Collector Game"></a>
+        <a href="https://amlilly.github.io/week-4-game/"><img src="assets/images/anotherCrystal1.png" alt="Crystals Collector Game"></a>
 
         <h3>Crystals Collector Game</h3>
       </div>
