--- a/portfolio.html
+++ b/portfolio.html
@@ -26,32 +26,32 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <a href="https://amlilly.github.io/Hangman-Game/"><img src="assets/images/hangman.jpg" alt="hangman"></a>
+        <a href="https://amlilly.github.io/Hangman-Game/"><img src="assets/images/hangman.jpg" alt="hangman" height="300" width="200"></a>
 
         <h3>Hangman</h3>
       </div>
       <div class="work">
-          <a href="https://amlilly.github.io/Giphy-API/"><img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game"></a>
+          <a href="https://amlilly.github.io/Giphy-API/"><img src="assets/images/gorilla.jpg" alt="RPG Game" height="300" width="200"></a>
 
         <h3>Zoo Animal Gifs</h3>
       </div>
       <div class="work">
-          <a href="https://amlilly.github.io/TriviaGame/"><img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game"></a>
+          <a href="https://amlilly.github.io/TriviaGame/"><img src="assets/images/USA.jpg" alt="Trivia Game" height="300" width="200"></a>
 
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-          <a href="https://amlilly.github.io/Train-Scheduler/"><img src="assets/images/train.jpg" alt="Train Scheduler"></a>
+          <a href="https://amlilly.github.io/Train-Scheduler/"><img src="assets/images/train.jpg" alt="Train Scheduler" height="300" width="200"></a>
 
         <h3>Train Scheduler</h3>
       </div>
       <div class="work">
-        <img src="assets/images/rps.png" alt="Rock Paper Scissors">
+        <img src="assets/images/rps.png" alt="Rock Paper Scissors" height="300" width="200">
 
         <h3>Rock Paper Scissors</h3>
       </div>
       <div class="work">
-        <a href="https://amlilly.github.io/week-4-game/"><img src="assets/images/anotherCrystal1.png" alt="Crystals Collector Game"></a>
+        <a href="https://amlilly.github.io/week-4-game/"><img src="assets/images/anotherCrystal1.png" alt="Crystals Collector Game" height="300" width="200"></a>
 
         <h3>Crystals Collector Game</h3>
       </div>
