--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,16 @@
 
         <h3>Crystals Collector Game</h3>
       </div>
+      <div class="work">
+        <a href="https://amlilly.github.io/GreenOnTheGo/"><img src="assets/images/green-truck-large.png" alt="Green on the Go" height="400" width="600"></a>
+
+        <h3>Green on the Go</h3>
+      </div>
+      <div class="work">
+        <a href="https://github.com/amlilly/liri-node-app"><img src="assets/images/roomba.jpg" alt="LIRI Bot" height="400" width="400"></a>
+
+        <h3>LIRI Bot</h3>
+      </div>
     </section>
 
     <section class="sidebar">
