--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,16 @@
 
         <h3>LIRI Bot</h3>
       </div>
+      <div class="work">
+        <a href="https://github.com/amlilly/"><img src="http://via.placeholder.com/400x400" alt="" height="400" width="400"></a>
+
+        <h3>Another Project</h3>
+      </div>
+      <div class="work">
+        <a href="https://github.com/amlilly/"><img src="http://via.placeholder.com/400x400" alt="" height="400" width="400"></a>
+
+        <h3>Another Project</h3>
+      </div>
     </section>
 
     <section class="sidebar">
